rnsc/test_data/rns_integration/error/parser/method_directive/access_flags/annotation.rns
.class MethodWithAnnotationFlag
.super java/lang/Object

.method annotation main ()V
.method_end
.class_end
